<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MasterMenu">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/PCS_WarriorButton"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:onClick="CreateNewEntityButton"
            android:text="@string/MM_AddPlayer" />

        <Button
            android:id="@+id/PCS_MageButton"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:onClick="ModifyEntityButton"
            android:text="@string/MM_ModifyPlayer" />

        <Button
            android:id="@+id/PCS_Assassin"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:onClick="CreateNewSessionButton"
            android:text="@string/MM_StartSession" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>