<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerClassSelector">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constrainedHeight="false"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PCS_NameLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/PCS_Name" />

            <EditText
                android:id="@+id/PCS_EditTextName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:gravity="center|center_horizontal|center_vertical"
                android:inputType="textPersonName" />
        </LinearLayout>

        <Button
            android:id="@+id/PCS_WarriorButton"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:onClick="CreateWarriorButton"
            android:text="@string/PCS_Warrior" />

        <Button
            android:id="@+id/PCS_MageButton"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:onClick="CreateMageButton"
            android:text="@string/PCS_Mage" />

        <Button
            android:id="@+id/PCS_Assassin"
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:onClick="CreateAssassinButton"
            android:text="@string/PCS_Assassin" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>