<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EnemyCreatorFormActivity">

    <TextView
        android:id="@+id/ECFTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginLeft="176dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="177dp"
        android:layout_marginRight="177dp"
        android:text="@string/ECF_Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="391dp"
        android:layout_height="631dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ECFTitle">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Category"
                    android:visibility="visible" />

                <Spinner
                    android:id="@+id/ECFSpinnerCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Name"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:inputType="textPersonName"
                    android:visibility="visible" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="279dp">

                <TextView
                    android:id="@+id/ECFTextViewLevel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Level"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewHealth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Health"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextHealth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewStrength"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Strength"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextStrength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewAgility"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Agility"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextAgility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewConstitution"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Constitution"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextConstitution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewDexterity"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Dexterity"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextDexterity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewWeapon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Weapon"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextWeapon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewArmor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Armor"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextArmor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewAttack"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Attack"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextAttack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ECFTextViewDefense"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ECF_Defense"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/ECFEditTextDefense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/ECFButtonSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="SaveEntityButton"
                    android:text="@string/ECF_ButtonSaveEntity" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>